--- a/packages/elemental/elemental/package.yaml
+++ b/packages/elemental/elemental/package.yaml
@@ -1,2 +1,2 @@
-url: oci://registry.suse.com/rancher/elemental-operator-chart:1.5.4
-version: 103.3.1
+url: oci://registry.opensuse.org/isv/rancher/elemental/pr/rancher/elemental-operator/pr-800/charts/rancher/elemental-operator-chart:1.5.0
+version: 103.4.0
